# LD50

./: Cargo.toml
src/: assets.rs  bird.rs  cursor.rs  fling.rs  level_gen.rs  lightning.rs  main.rs  player.rs  scene.rs
src/scenes/: end_scece.rs  game_scene.rs  menu_scene.rs  mod.rs
stuff/: bird.pdn  ideas.txt  meter.pdn
web/: index.html
