[package]
name = "ld50"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.15"
serde = { version = "1.0.136", features = ["derive"] }
ron = "0.7.0"
enum-map = { version = "2.1.0", features = ["serde"] }
